--- a/subtasks.json
+++ b/subtasks.json
@@ -8,27 +8,32 @@
         },
         "smallType1": {
             "index": 1,
-            "score": 15,
+            "score": 10,
             "validators": []
         },
         "bigType1": {
-            "index": 1,
-            "score": 25,
+            "index": 2,
+            "score": 20,
             "validators": []
         },
         "smallType2": {
-            "index": 1,
-            "score": 15,
+            "index": 3,
+            "score": 10,
             "validators": []
         },
         "bigType2": {
-            "index": 1,
-            "score": 45,
+            "index": 4,
+            "score": 20,
             "validators": []
         },
-        "full": {
-            "index": 1,
-            "score": 100,
+        "smallType3": {
+            "index": 5,
+            "score": 10,
+            "validators": []
+        },
+        "bigType3": {
+            "index": 6,
+            "score": 30,
             "validators": []
         }
     }
